@@ -3,6 +3,7 @@
 ==============================
 Release 5.6.0.0
 ==============================
+2015-10-08    VisualTreeAssist: Rename Childs by Children
 2015-10-07    BrowseTextBox: Prevent browse button to be shared if placed in the same panel
               SearchTextBox: Prevent search and cancel button to be shared if placed in the same panel
 2015-09-30    EventToCommand: Add EventToCommand to be able to connect control events to ICommands via bindings
